# string_view

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: cmake_unix.yml  cmake_windows.yml
example/: CMakeLists.txt  sv_basic.cpp
include/abin/: string_view.h
string_view/: CMakeLists.txt
string_view/include/abin/: string_view.h
string_view/include/string_view/: string_view.h
test/: CMakeLists.txt  test.cpp
